--- a/styles.css
+++ b/styles.css
@@ -42,58 +42,118 @@ body {
   color: #3378bb
 }
 
-.search-container {
-  padding: 20px;
-  color: #4a4a4d;
-  position: relative;
-}
-
-.search-container .search-title {
-  margin-bottom: 20px;
-}
-
-.search-container .search-title span {
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.search-container .search-title .show-message {
-  position: absolute;
-  right: 20px;
+.header #openSearch {
   border: none;
   height: 32px;
   min-width: 24px;
-  border-radius: 3px;
   text-shadow: none;
   line-height: 32px;
   padding: 0 10px;
-  color: #fff;
-  background: #3378bb;
+  color: #000;
+  background: #ffdc5b;
   cursor: pointer;
   outline: 0;
+  margin-left: 10px
 }
 
-.search-container .search-title .show-message:hover {
-  background-color: #4293e2;
+.header #openSearch:hover {
+  background-color: #c99f01;
 }
 
-.search-container .search-embed {
+.popover {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: none;
+  z-index: 20;
+}
+
+.popover.open {
+  display: block;
+}
+
+.popover .popover-background {
+  position: absolute;
+  height: 100%;
   width: 100%;
-  height: 500px;
+  top: 0;
+  left: 0;
+  background: rgba(100, 100, 100, 0.8);
+}
+
+.popover .popover-content {
+  position: absolute;
+  width: 90%;
+  height: 90%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: #fff;
+  border: 1px solid #454545;
+  display: flex;
+  flex-direction: column;
+}
+
+.popover .popover-body {
+  flex-grow: 1;
+  flex-basis: 100%;
+  padding: 10px;
   position: relative;
 }
 
-.search-container .search-embed #embed,
-.search-container .search-embed iframe {
-  width: 100%;
-  height: 100%;
-}
-
-.search-container .search-embed .loader {
+.popover .popover-body .loader {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.popover iframe {
+  width: 100%;
+  height: 100%;
+}
+
+.popover .popover-header {
+  display: flex;
+  flex-direction: row;
+  background: #dedede;
+  align-items: center;
+  padding: 5px;
+  font-family: sans-serif;
+}
+
+.popover .popover-header .title {
+  flex: 1;
+}
+
+.popover .popover-header .close-btn {
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  text-align: center;
+  cursor: pointer;
+  position: relative;
+}
+
+.popover .popover-header .close-btn::after,
+.popover .popover-header .close-btn::before {
+  content: '';
+  position: absolute;
+  width: 16px;
+  height: 2px;
+  left: 6px;
+  top: 50%;
+  background: #7d7d7d;
+}
+
+.popover .popover-header .close-btn::after {
+  transform: rotate(45deg);
+}
+
+.popover .popover-header .close-btn::before {
+  transform: rotate(-45deg);
 }
 
 .content-block {
