--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,32 @@
+html,
 body {
   margin: 0;
+  background: #72ba88;
+  color: white;
+  height: 100%;
 }
 
 .wrapper {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.contents {
+  flex-grow: 1;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+}
+
+.footer a {
+  margin: 0 30px;
+  padding: 5px;
+  cursor: pointer;
 }
 
 .header {
@@ -14,16 +36,25 @@ body {
   display: flex;
   padding: 20px;
   font-size: 16px;
-  background: #fff;
   box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.22);
   z-index: 10;
 }
 
 .header .logo {
-  font-weight: bold;
-  color: #0171ce;
-  font-size: 24px;
+  font-size: 18px;
   cursor: pointer;
+  width: 380px;
+  display: flex;
+  align-items: center;
+}
+
+.header .logo svg {
+  fill: currentColor;
+}
+
+.header .logo span {
+  display: inline-block;
+  margin-left: 10px;
 }
 
 .header .menu-bar {
@@ -45,6 +76,7 @@ body {
 .search-container {
   padding: 20px;
   color: #4a4a4d;
+  background: #ffffff;
   position: relative;
 }
 
