--- a/search/styles.css
+++ b/search/styles.css
@@ -8,75 +8,186 @@ body {
 
 .wrapper {
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
   display: flex;
   flex-direction: column;
   height: 100%;
 }
 
-.contents {
-  flex-grow: 1;
+:root {
+  --gutter: 0;
+  --darkblue: #2359B6;
+  --bgcolor: #e5e5e5;
+  --opacitywhite: rgba(255,255,255,.25);
+  --listcolor: #ABC7F9;
+  --white: #fff;
+  --black: #000;
+  --lightcream: #F6F8FA;
 }
 
-.footer {
+@font-face {
+  font-family: 'Plain';
+  src: url('../fonts/Plain-Medium.woff2') format('woff2'), url('../fonts/Plain-Medium.woff') format('woff');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Plain';
+  src: url('../fonts/Plain-Light.woff2') format('woff2'), url('../fonts/Plain-Light.woff') format('woff');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+body {
+  margin: var(--gutter);
+  padding: var(--gutter);
+  font-family: 'Plain';
+  font-size: 14px;
+  color: var(--white);
+  background: var(--bgcolor);
+}
+
+* {
+  box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
+}
+
+.m-0 {
+  margin: var(--gutter);
+}
+
+.container {
+  padding: 12px 36px;
+}
+
+/*active class without background*/
+
+.active {
+  color: var(--lightcream) !important;
+  border-bottom: 2px #fff solid;
+}
+
+/*start header section*/
+
+header {
+  background: var(--darkblue);
+  height: 50px;
+}
+
+.header-wrapper {
   display: flex;
-  justify-content: center;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.footer a {
-  margin: 0 30px;
-  padding: 5px;
-  cursor: pointer;
-}
-
-.header {
-  text-transform: uppercase;
-  position: sticky;
-  top: 0;
-  display: flex;
-  padding: 20px;
-  font-size: 16px;
-  box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.22);
-  z-index: 10;
-}
-
-.header .logo {
-  font-size: 18px;
-  cursor: pointer;
-  width: 380px;
+.logo {
   display: flex;
   align-items: center;
 }
 
-.header .logo svg {
-  fill: currentColor;
+.logo svg {
+  vertical-align: middle;
 }
 
-.header .logo span {
-  display: inline-block;
-  margin-left: 10px;
-}
-
-.header .menu-bar {
-  display: flex;
-  flex-grow: 1;
-  justify-content: flex-end;
-  align-items: center;
-}
-
-.header .menu-bar .menu-item {
+.line {
   margin: 0 10px;
-  cursor: pointer;
+  width: 1px;
+  height: 100%;
+  background: var(--opacitywhite);
+  position: absolute;
+  left: 0;
 }
 
-.header .menu-bar .menu-item:hover {
-  color: #3378bb
+.portal-block {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+  line-height: 20px;
+  position: relative;
+  padding: 0 21px;
+}
+
+.left-block {
+  display: flex;
+  align-items: center;
+}
+
+nav {
+  margin-left: 45px;
+}
+
+.ullist {
+  display: flex;
+  list-style-type: none;
+  padding: var(--gutter);
+  margin: var(--gutter);
+}
+
+.ullist li {
+  padding-right: 27px;
+}
+
+.ullist li a {
+  color: var(--listcolor);
+  font-size: 12px;
+  letter-spacing: -0.006em;
+  line-height: 20px;
+  padding-bottom: 13px;
+}
+
+.user-img {
+  width: 24px;
+  height: 24px;
+  border-radius: 100%;
+  margin-right: 8px;
+}
+
+.right-block {
+  display: flex;
+  align-items: center;
+}
+
+.username {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 12px;
+  line-height: 10px;
+  letter-spacing: -0.006em;
+}
+
+.username a {
+  margin-left: 15px;
+}
+
+/*end header section */
+
+.middlecontent {
+  padding: 24px;
+}
+
+.user-img img {
+  width: 100%;
+  height: 100%;
+}
+
+.arrowdown {
+  margin-left: 12px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  nav {
+    margin: 0;
+  }
 }
 
 .search-container {
   padding: 20px;
   color: #4a4a4d;
-  background: #ffffff;
   position: relative;
 }
 
@@ -103,7 +214,6 @@ body {
   background: #3378bb;
   cursor: pointer;
   outline: 0;
-  display: none;
 }
 
 .search-container .search-title .show-message:hover {
@@ -129,15 +239,6 @@ body {
   transform: translate(-50%, -50%);
 }
 
-.search-container .data-source-selector {
-    position: absolute;
-    right: 20px;
-    top: 25px;
-}
-
-.search-container .data-source-selector select {
-    margin-left: 5px;
-}
 .content-block {
   padding: 20px;
   color: #4a4a4d;
@@ -151,6 +252,9 @@ body {
   font-size: 28px;
 }
 
+.contents {
+  flex-grow: 1;
+}
 
 .loader,
 .loader:before,
@@ -182,7 +286,7 @@ body {
 .loader:before {
   width: 5.2em;
   height: 10.2em;
-  background: #fff;
+  background: var(--bgcolor);;
   border-radius: 10.2em 0 0 10.2em;
   top: -0.1em;
   left: -0.1em;
@@ -195,7 +299,7 @@ body {
 .loader:after {
   width: 5.2em;
   height: 10.2em;
-  background: #fff;
+  background: var(--bgcolor);;
   border-radius: 0 10.2em 10.2em 0;
   top: -0.1em;
   left: 4.9em;
