--- a/answer/styles.css
+++ b/answer/styles.css
@@ -26,7 +26,7 @@ body {
 
 @font-face {
   font-family: 'Plain';
-  src: url('https://github.com/ts-blink/embed-templates/blob/master/fonts/Plain-Medium.woff2?raw=true') format('woff2'), url('https://github.com/ts-blink/embed-templates/blob/master/fonts/Plain-Medium.woff?raw=true') format('woff');
+  src: url('../fonts/Plain-Medium.woff2') format('woff2'), url('../fonts/Plain-Medium.woff') format('woff');
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -34,7 +34,7 @@ body {
 
 @font-face {
   font-family: 'Plain';
-  src: url('https://github.com/ts-blink/embed-templates/blob/master/fonts/Plain-Light.woff2?raw=true') format('woff2'), url('https://github.com/ts-blink/embed-templates/blob/master/fonts/Plain-Light.woff?raw=true') format('woff');
+  src: url('../fonts/Plain-Light.woff2') format('woff2'), url('../fonts/Plain-Light.woff') format('woff');
   font-weight: 300;
   font-style: normal;
   font-display: swap;
