--- a/pinboard/styles.css
+++ b/pinboard/styles.css
@@ -1,7 +1,7 @@
 :root {
   --gutter: 0;
   --darkblue: #2359B6;
-  --bgcolor: #e5e5e5;
+  --bgcolor: #EAEDF2;
   --opacitywhite: rgba(255,255,255,.25);
   --listcolor: #ABC7F9;
   --white: #fff;
